add function saveFavourite

--- a/src/index.css
+++ b/src/index.css
@@ -42,7 +42,7 @@
   padding: 16px;
 }
 
-.card {
+.cardCats, .cardFavourites  {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 1rem;
